Fix padding of blog description on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -180,8 +180,10 @@ time {
         margin-top: 0;
         padding-top: 0;
     }
-    #blog-mobile-about {
-        margin: 10px;
+    #mobile-blog-about {
+        padding: 0 30px 0 30px;
+        font-style: italic;
+    }
     }
     #blog-main {
         padding-top: 50px;
